<resources>
    <string name="app_name">CurrentWeather</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="close_application_message">Do you wish to close this
        application?</string>
    <string name="close_application_title">Close Application!</string>
    <string name="api_key">3f8ffad517caf39f777097481155d6a2</string>
    <string name="refresh_button">Refresh Button</string>
    <string name="hourly_image">Hourly Weather Icon</string>
    <string name="missing_data">--</string>
    <string name="currently">Currently</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="condition">Condition: </string>
    <string name="temperature">0°</string>
    <string name="real_feel">Real Feel: </string>
    <string name="date_and_time">Date and Time: </string>
    <string name="celsius"> C </string>
    <string name="fahrenheit"> F </string>
</resources>
